# beam

./: build.gradle.kts  settings.gradle  settings.gradle.kts
buildSrc/: build.gradle
buildSrc/src/main/groovy/org/apache/beam/gradle/: BeamModulePlugin.groovy  GrpcVendoring_1_26_0.groovy
runners/core-java/src/main/java/org/apache/beam/runners/core/metrics/: ExecutionStateSampler.java
runners/google-cloud-dataflow-java/src/main/java/org/apache/beam/runners/dataflow/: DataflowRunner.java
runners/spark/src/main/java/org/apache/beam/runners/spark/: SparkPipelineOptions.java
runners/spark/src/main/java/org/apache/beam/runners/spark/translation/: SparkContextFactory.java
sdks/java/core/src/main/java/org/apache/beam/sdk/io/: GenericRecordWriteConverter.java
sdks/java/core/src/main/java/org/apache/beam/sdk/schemas/logicaltypes/: Date.java  DateTime.java  Time.java
sdks/java/core/src/main/java/org/apache/beam/sdk/schemas/utils/: AvroUtils.java
sdks/java/core/src/test/java/org/apache/beam/sdk/schemas/utils/: AvroUtilsTest.java
sdks/java/extensions/google-cloud-platform-core/: build.gradle
sdks/java/extensions/sql/: build.gradle
sdks/java/extensions/sql/cli/: build.gradle
sdks/java/extensions/sql/shell/: build.gradle
sdks/java/io/google-ads/: build.gradle
sdks/rust/: .gitignore  Cargo.toml  README.md  build.gradle  build.rs  build.sh
sdks/rust/beam_core/: Cargo.toml
sdks/rust/beam_core/src/: lib.rs  pvalue.rs
sdks/rust/coders/: Cargo.toml
sdks/rust/coders/src/: coders.rs  lib.rs  required_coders.rs  rust_coders.rs  standard_coders.rs  urns.rs
sdks/rust/container/: boot.go  boot_test.go  build.gradle
sdks/rust/examples/: wordcount.rs
sdks/rust/internals/: Cargo.toml
sdks/rust/internals/src/: lib.rs  pipeline.rs  pvalue.rs  urns.rs
sdks/rust/proto/: Cargo.toml  build.rs
sdks/rust/proto/src/: lib.rs
sdks/rust/runners/: Cargo.toml
sdks/rust/runners/src/: direct_runner.rs  lib.rs  runner.rs
sdks/rust/src/: lib.rs  main.rs  primitives_test.rs  proto.rs
sdks/rust/src/apache_beam/: mod.rs
sdks/rust/src/apache_beam/proto/: org.apache.beam.model.expansion.v1.rs  org.apache.beam.model.fn_execution.v1.rs  org.apache.beam.model.interactive.v1.rs  org.apache.beam.model.job_management.v1.rs  org.apache.beam.model.pipeline.v1.rs
sdks/rust/src/apache_beam/worker/: external_worker_service.rs  mod.rs  sdk_worker.rs
sdks/rust/src/coders/: coders.rs  mod.rs  required_coders.rs  rust_coders.rs  standard_coders.rs  urns.rs
sdks/rust/src/coders/coder_resolver/: mod.rs
sdks/rust/src/coders/coder_urn_tree/: mod.rs
sdks/rust/src/coders/coders/coder_resolver/: mod.rs
sdks/rust/src/coders/pipeline_construction/: mod.rs
sdks/rust/src/coders/pipeline_construction/coder_urn_tree/: mod.rs
sdks/rust/src/coders/preset_coder_from_variant/: mod.rs
sdks/rust/src/coders/register_coders/: mod.rs
sdks/rust/src/coders/rust_coders/unit_coder/: mod.rs
sdks/rust/src/coders/standard_coders/nullable_coder/: mod.rs
sdks/rust/src/elem_types/: mod.rs
sdks/rust/src/elem_types/kv/: mod.rs
sdks/rust/src/internals/: mod.rs  pipeline.rs  pvalue.rs  serialize.rs  urns.rs
sdks/rust/src/proto/: mod.rs
sdks/rust/src/runners/: direct_runner.rs  mod.rs  runner.rs
sdks/rust/src/test_custom_coders/: mod.rs
sdks/rust/src/tests/: coders_test.rs  mod.rs  primitives_test.rs  worker_test.rs
sdks/rust/src/transforms/: create.rs  flatten.rs  group_by_key.rs  impulse.rs  mod.rs  pardo.rs  testing.rs
sdks/rust/src/worker/: data.rs  data_test.rs  external_worker_service.rs  interceptors.rs  mod.rs  operators.rs  sdk_worker.rs  worker_main.rs
sdks/rust/src/worker/anonymous_coder/: mod.rs
sdks/rust/src/worker/coder_from_urn/: mod.rs
sdks/rust/src/worker/coder_from_urn/custom_coder_from_urn/: mod.rs
sdks/rust/src/worker/coder_from_urn/preset_coder_from_urn/: mod.rs
sdks/rust/src/worker/worker_test/: mod.rs
sdks/rust/src/worker/worker_test/coder_usage_tests/: mod.rs
sdks/rust/tests/: coders_test.rs  custom_coders_test.rs  data_test.rs  elem_type_test.rs  overrider_coder_test.rs  preset_coders_test.rs  primitives_test.rs  serde_custom_coder_test.rs  worker_test.rs
sdks/rust/transforms/: Cargo.toml
sdks/rust/transforms/src/: impulse.rs  lib.rs  pardo.rs
sdks/rust/worker/: Cargo.toml
sdks/rust/worker/src/: data.rs  external_worker_service.rs  lib.rs  operators.rs  sdk_worker.rs  worker_main.rs
(+22 files in other folders)
