#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "apache-beam"
description = "Apache Beam Rust SDK"
version = "2.40.0"
edition = "2021"
homepage = "https://beam.apache.org"
license = "Apache-2.0"
repository = "https://github.com/apache/beam"

[dependencies]
# Suggested by the compiler itself due to: https://github.com/rust-lang/rust/issues/91611
async-stream = "0.2"
async-trait = "0.1.60"
bytes = "1.3.0"
clap = { version = "4.0", features = ["derive"] }
ctor = "0.2"
futures = "0.3.25"
futures-core = "0.3"
futures-util = "0.3"
integer-encoding = "3.0.4"
moka = { version = "0.9.6", features = ["future"] }
once_cell = "1.16.0"
prost = "0.11"
prost-types = "0.11"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.14"
strum_macros = "0.24"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7.4"
tokio-stream = "0.1"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
